--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE TML>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -433,7 +433,6 @@
                         filename,
                         url,
                         theme,
-                        term,
                         level: 'New', // Default
                         correctCount: 0 // Default
                     };
