--- a/indexV5.html
+++ b/indexV5.html
@@ -1,9 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mastery Quiz</title>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <style>
         /* --- CSS STYLES (Mobile-First Responsive Design) --- */
         :root {
@@ -141,7 +143,7 @@
             transition: opacity 0.2s;
             width: 45%; /* To control button layout */
         }
-        /* Primary button (Cancel - Keep progress) -> Green BG */
+        /* Primary button (Cancel - Keep progress) -> Green BG (Keep as primary action/default focus) */
         #modal-cancel-btn {
             background-color: var(--color-secondary); /* Green */
             color: var(--color-light-text);
@@ -149,13 +151,34 @@
         #modal-cancel-btn:hover {
             opacity: 0.9;
         }
-        /* Secondary button (Confirm - Reset progress) -> Red BG */
+        /* Secondary button (Confirm - Reset progress) -> Text-like red style */
         #modal-confirm-btn {
-            background-color: var(--color-wrong); /* Red */
-            color: var(--color-light-text);
+            background-color: transparent; /* No background */
+            color: var(--color-wrong); /* Red text */
+            border: none;
+            box-shadow: none;
         }
         #modal-confirm-btn:hover {
-            opacity: 0.9;
+            opacity: 0.7;
+            /* Added underline hover hint for text button */
+            text-decoration: underline; 
+        }
+
+        /* MODIFIED: Reverse order of buttons in the modal for Reset on Left */
+        #custom-modal-content > div {
+            flex-direction: row-reverse;
+        }
+        /* ADDED: Style for the reset icon next to the heading */
+        #modal-heading i {
+             margin-right: 8px;
+        }
+        /* ADDED: Visible focus styling for better UX/accessibility */
+        #modal-cancel-btn:focus {
+            outline: 3px solid var(--color-primary);
+            outline-offset: 2px;
+        }
+        #modal-confirm-btn:focus {
+             outline: none; /* Keep the reset button looking like text even when focused */
         }
 
 
@@ -383,10 +406,10 @@
             
             <div class="home-actions-container">
                 <button id="reset-button" class="study-again-button" onclick="resetProgress()">
-                    Study all over again 🔄
+                    Study all over again <i class="fa fa-refresh"></i> 
                 </button>
                 <button id="logout-button" class="study-again-button logout-button-styled" onclick="logout()">
-                    Log Out 🚪
+                    Log Out <i class="fa fa-sign-out"></i>
                 </button>
             </div>
         </div>
@@ -438,11 +461,11 @@
 
     <div id="custom-modal-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:100;">
         <div id="custom-modal-content" style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); background:white; padding:20px; border-radius:8px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); max-width: 400px; width: 90%; text-align: center;">
-            <h3 id="modal-heading" style="color:var(--color-text); margin-top:0;">Reset the progress counter</h3>
+            <h3 id="modal-heading" style="color:var(--color-text); margin-top:0;"><i class="fa fa-refresh"></i> Reset the progress counter</h3>
             <p id="modal-text">If you confirm, you will loose all your progress in the Medium, Advanced and Expert list.</p>
             <div style="display:flex; justify-content: space-around; margin-top: 20px;">
                 <button id="modal-cancel-btn" class="modal-btn">Don't reset progress</button>
-                <button id="modal-confirm-btn" class="modal-btn">Reset progress</button>
+                <button id="modal-confirm-btn" class="modal-btn">Reset progress anyway</button>
             </div>
         </div>
     </div>
