--- a/index.html
+++ b/index.html
@@ -430,13 +430,13 @@
                     Study all over again <i class="fa fa-refresh"></i> 
                 </button>
                 <button id="logout-button" class="study-again-button logout-button-styled" onclick="logout()">
-                    Log Out <i class="fa fa-sign-out"></i>
+                    Log Out <i class="fas fa-sign-out-alt"></i>
                 </button>
             </div>
         </div>
 
         <div id="question-screen" class="screen">
-            <button class="exit-button" onclick="goToHome()"><i class="fa fa-times"></i></button>
+            <button class="exit-button" onclick="goToHome()"><i class="fas fa-times"></i></button>
             <h2 id="quiz-title">What is this?</h2>
             <div class="timer-container" id="timer-container" style="display:none;">
                 <div id="timer-bar"></div>
@@ -450,7 +450,7 @@
         </div>
 
         <div id="feedback-screen" class="screen">
-            <button class="exit-button" onclick="goToHome()"><i class="fa fa-times"></i></button>
+            <button class="exit-button" onclick="goToHome()"><i class="fas fa-times"></i></button>
             <h2 class="feedback-message" id="feedback-message"></h2>
             
             <div class="main-question-area">
